--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,24 +1,21 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build output
+dist/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Environment variables file
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Logs
+*.log
+
+# TypeScript cache
+*.tsbuildinfo
+
+# OS-specific files (e.g., macOS or Windows)
+.DS_Store
+Thumbs.db
+
+# IDE/Editor settings
+.vscode/
