--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "npx nodemon src/index.js",
-    "prepare": "npx husky install"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^4.16.2",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0"
-  },
+  "description": "",
   "devDependencies": {
-    "husky": "^8.0.3",
-    "nodemon": "^2.0.22",
-    "prisma": "^4.16.2"
+    "@types/express": "^5.0.0",
+    "@types/mysql": "^2.15.26",
+    "@types/node": "^22.10.2",
+    "concurrently": "^9.1.1",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0"
   }
 }
