--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.10.2",
     "concurrently": "^9.1.1",
@@ -20,6 +21,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
