--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,12 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@clerk/express": "^1.3.46",
     "cors": "^2.8.5",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "zod": "^3.24.1"
